deployment/helm/keycloak/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloakingress
spec:
  tls:
    - hosts:
        - dev.testfutura-cloud.com
      secretName: test-tls
  ingressClassName: nginx
  rules:
    - host: dev.testfutura-cloud.com
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: test-keycloak
                port:
                  number: 80
          - path: /login*
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
